k8s/manifests/oci/23/b4wordle/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: b4w

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b4w
  namespace: b4w
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b4w
  template:
    metadata:
      labels:
        app: b4w
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: b4w-backend
          #image: harness.rileysnyder.dev/b4w/b4w/backend:alpine
          image: ghcr.io/moserhu/battle-for-wordle-backend:c1523955284e1574f55dc15cae28a977deed63e7
            #imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8002
          volumeMounts:
            - name: b4w-storage
              mountPath: /db/
        - name: b4w-frontend
          #image: harness.rileysnyder.dev/b4w/b4w/frontend:nginx
          #imagePullPolicy: Always
          image: ghcr.io/moserhu/battle-for-wordle-backend:c1523955284e1574f55dc15cae28a977deed63e7
          ports:
            - name: http
              containerPort: 80
      volumes:
        - name: b4w-storage
          persistentVolumeClaim:
            claimName: b4w

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: b4w
spec:
  selector:
    app: b4w
  ports:
    - port: 80
      targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: b4w
spec:
  selector:
    app: b4w
  ports:
    - port: 80
      targetPort: api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: b4w
  namespace: b4w
  annotations:
    external-dns.alpha.kubernetes.io/hostname: b4w.rileysnyder.dev
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - b4w.rileysnyder.dev
    secretName: b4w-tls
  rules:
    - host: b4w.rileysnyder.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name:  backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  frontend
                port:
                  number: 80
